--- a/src/pages/contact-edit/contact-edit.scss
+++ b/src/pages/contact-edit/contact-edit.scss
@@ -1,3 +1,10 @@
 page-contact-edit {
-
+	md-card {
+		margin-top: 1em;
+		margin-bottom: 1em;
+	}
+	.two-columns>* {
+		flex: 1;
+		min-width: 50%;
+	}
 }
